image uplaod field added

--- a/app.json
+++ b/app.json
@@ -2,6 +2,16 @@
   "expo": {
     "name": "sample1",
     "slug": "sample1",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends.",
+          "cameraPermission": "The app accesses your camera to let you take photos.",
+          "microphonePermission": "The app accesses your microphone to let you record videos."
+        }
+      ]
+    ]
   }
 }
