--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^21.7.2",
+    "@react-native-firebase/firestore": "^21.7.2",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.30",
@@ -21,10 +23,11 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-image-picker": "^8.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.13.1",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.6.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
   },
